added Firebase and User object

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,13 +72,13 @@
         android:layout_marginTop="8dp"
         android:max="1000"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btn_borrow"
+        app:layout_constraintBottom_toTopOf="@+id/button_borrow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_amount" />
 
     <Button
-        android:id="@+id/btn_borrow"
+        android:id="@+id/button_borrow"
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
@@ -107,5 +107,17 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:text="NAME GOES HERE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seb_amount" />
 
 </android.support.constraint.ConstraintLayout>
