--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,24 +11,26 @@
         android:id="@+id/loan_ranges"
         android:layout_width="280dp"
         android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:text="Loan Range:"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="267dp" />
+        app:layout_constraintTop_toBottomOf="@+id/fullName"
+        tools:layout_editor_absoluteX="52dp" />
 
     <TextView
         android:id="@+id/loan_min_max"
         android:layout_width="280dp"
         android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:text="R0 - R1000"
-        android:textAlignment="center"
 
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24dp"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="310dp" />
+        app:layout_constraintTop_toBottomOf="@+id/loan_ranges"
+        tools:layout_editor_absoluteX="52dp" />
 
 
     <Button
@@ -37,6 +39,7 @@
         android:layout_height="45dp"
         android:layout_marginEnd="64dp"
         android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/darker_gray"
         android:elevation="8dp"
         android:text="Edit Profile"
@@ -44,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="500dp" />
+        app:layout_constraintTop_toBottomOf="@+id/RatingPic" />
 
     <TextView
         android:id="@+id/MyProfile"
@@ -65,26 +68,29 @@
         android:id="@+id/ProfilePic"
         android:layout_width="114dp"
         android:layout_height="124dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/MyProfile"
         app:srcCompat="@mipmap/ic_launcher_round"
-        tools:layout_editor_absoluteX="135dp"
-        tools:layout_editor_absoluteY="58dp" />
+        tools:layout_editor_absoluteX="135dp" />
 
     <ImageView
         android:id="@+id/RatingPic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/loan_min_max"
         app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="365dp" />
+        tools:layout_editor_absoluteX="138dp" />
 
     <TextView
         android:id="@+id/fullName"
         android:layout_width="280dp"
         android:layout_height="40dp"
+        android:layout_marginTop="8dp"
         android:text="Name Surname"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
-        android:textAlignment="center"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintTop_toBottomOf="@+id/ProfilePic"
+        tools:layout_editor_absoluteX="52dp" />
 </android.support.constraint.ConstraintLayout>
