--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,78 +10,31 @@
         android:id="@+id/img_user"
         android:layout_width="69dp"
         android:layout_height="64dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/user" />
 
-    <ImageView
-        android:id="@+id/img_logo"
-        android:layout_width="75dp"
-        android:layout_height="77dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/img_settings"
-        app:layout_constraintStart_toEndOf="@+id/img_user"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/dass" />
-
-    <EditText
-        android:id="@+id/edt_r"
-        android:layout_width="24dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="96dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="R"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/edt_amount"
-        app:layout_constraintTop_toBottomOf="@+id/img_logo" />
-
     <EditText
         android:id="@+id/edt_amount"
         android:layout_width="146dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:inputType="numberDecimal"
+        android:maxLength="3"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/img_settings"
-        app:layout_constraintTop_toBottomOf="@+id/edt_welcome" />
-
-    <SeekBar
-        android:id="@+id/seb_amount"
-        android:layout_width="271dp"
-        android:layout_height="36dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:max="1000"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/button_borrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_amount" />
+        app:layout_constraintTop_toBottomOf="@+id/txv_welcome" />
 
     <Button
         android:id="@+id/button_borrow"
         android:layout_width="255dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="72dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -99,57 +52,56 @@
         android:id="@+id/img_settings"
         android:layout_width="52dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginTop="4dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/settings_logo"
 
+        android:src="@drawable/settings_logo"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/text_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:text="NAME GOES HERE"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seb_amount" />
-
-    <EditText
-        android:id="@+id/edt_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:editable="false"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_logo"
-        tools:text="Welcome" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/img_logo"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toStartOf="@+id/img_settings"
+        app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_user"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bell" />
+
+    <TextView
+        android:id="@+id/txv_welcome"
+        android:layout_width="295dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:text="Welcome"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        android:layout_marginTop="68dp"
+        android:text="R"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/edt_amount"
+        app:layout_constraintTop_toBottomOf="@+id/txv_welcome" />
 
 </android.support.constraint.ConstraintLayout>
