--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.unsignedcharacters.dassie.MainActivity">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/image_settings"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="75dp"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/ic_settings_black_24dp" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/image_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="75dp"
@@ -43,7 +43,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/image_notif" />
 
     <Button
         android:id="@+id/button_borrow"
@@ -64,15 +64,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/image_notif"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:elevation="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/image_settings"
+        app:layout_constraintStart_toEndOf="@+id/image_profile"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/ic_monetization_on_black_24dp" />
 
@@ -87,7 +87,7 @@
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/image_notif" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageView"
