--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image_settings"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="75dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginTop="40dp"
         android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/image_profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="75dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="40dp"
         android:elevation="8dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="75dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:maxLength="3"
@@ -43,7 +43,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/image_notif" />
+        app:layout_constraintTop_toBottomOf="@+id/image_settings" />
 
     <Button
         android:id="@+id/button_borrow"
@@ -63,31 +63,18 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/image_notif"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:elevation="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/image_settings"
-        app:layout_constraintStart_toEndOf="@+id/image_profile"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/ic_monetization_on_black_24dp" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginStart="75dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:text="R"
         android:textColor="@android:color/black"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_notif" />
+        app:layout_constraintTop_toBottomOf="@+id/image_profile" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageView"
